i-MSCP ChangeLog
~~~~~~~~~~~~~~~~

-------------------------------------------------------------------------------------
i-MSCP Git Master
-------------------------------------------------------------------------------------

SETUP:
	- Added support for external repositories (Debian/Ubuntu)
	- Fixed: Do not show any dialog when --noprompt option is used

CONFIGS:
	- Fixed: Remove useless sections in Apache configuration files
	- Updated php.ini files

ENGINE:
	- Added support for Apache + PHP FPM
	- Fixed SPF record syntax

Tickets:
	- Fixed #64:  Nice to have - PHP FPM
	- Fixed #566: Cosmetics - i18n issues

-------------------------------------------------------------------------------------
i-MSCP 1.1.0-rc1.4
-------------------------------------------------------------------------------------

2013-01-07: Laurent Declercq
	- RELEASE i-MSCP 1.1.0-rc1.4

DISTROS:
	- Added package files for Ubuntu Quantal Quetzal and Ubuntu Raring Ringtail

CONFIGS:
	- Updated fcgid configuration files for high-load sites

Tickets:
	- Fixed #274 (reopened): Defect - Proftpd limits doesn't work
	- Fixed #548: Bug - Missing comment character in configs/debian/fcgi/parts/php5-fcgid-starter.tpl
	- Fixed #550: Boolean PHP Values should be set with php_flag and not php_value
	- Fixed #551: Bug - Preseed feature is broken
	- Fixed #552: Bug - PHP constants are not recognized outside of PHP (such as in Apache vhost files)
	- Fixed #555: Cosmetics - Missing translation at reseller level
	- Fixed #560: Review - Backup filenames are not windows-friendly
	- Fixed #562: Bug - Error in apache_fcgi installer
	- Fixed #563: Defect - protected_plugins.php file not in gui/cache
	- Fixed #565: Bug - Ftp limits not applied - Proftpd not restarted

-------------------------------------------------------------------------------------
i-MSCP 1.1.0-rc1.3
-------------------------------------------------------------------------------------

2012-12-27: Laurent Declercq
	- RELEASE i-MSCP 1.1.0-rc1.3
