@@ -8,6 +8,7 @@ i-MSCP Git Master
 SETUP:
 	- Added support for external repositories (Debian/Ubuntu)
 	- Fixed: Do not show any dialog when --noprompt option is used
+	- Fixed: Uninstall unneeded packages when switching to another server type
 
 CONFIGS:
 	- Fixed: Remove useless sections in Apache configuration files
@@ -19,7 +20,9 @@ ENGINE:
 
 Tickets:
 	- Fixed #64:  Nice to have - PHP FPM
+	- Fixed #543: Bug - Dovecot not stopped when switching to courier
 	- Fixed #566: Cosmetics - i18n issues
+	- Fixed #586: defect - PHP FPM still running when switching to another server
 
 -------------------------------------------------------------------------------------
 i-MSCP 1.1.0-rc1.4
